web-infras/parser/tests/fixtures/babel/core/scope/for-var/output.txt
[SyntaxError]: Identifier has already been declared. (2,9)
2|    var i;
 |       ^
